--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -2,29 +2,32 @@ name: workflow
 
 on:
   push:
-    - main
-  paths-ignore:
-    - 'README.md'
+    branches:
+      - main
+    paths-ignore:
+      - 'README.md'
+
 permissions:
   id-token: write
   contents: read
 
 jobs:
   integration:
-    name: Conineous Integration
-    runs-on: ubumtu-latest
+    name: Continuous Integration
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
-      
-      - name: Lint Code
+
+      - name: Lint code
         run: echo "Linting repository"
-      
-      - name: "Running unit Tests"
+
+      - name: Run unit tests
+        run: echo "Running unit tests"
 
   build-and-push-ecr-image:
-    name: Contineous Delivery
-    needs: Integration
+    name: Continuous Delivery
+    needs: integration
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
@@ -32,61 +35,64 @@ jobs:
 
       - name: Install Utilities
         run: |
-          sudo-apt-get update
-          sudo-apt-get install -y jq unzip
-        
-      - name: Configuration AWS Credentials
+          sudo apt-get update
+          sudo apt-get install -y jq unzip
+      - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
-        
+
       - name: Login to Amazon ECR
         id: login-ecr
-        uses: aws-actions/amazon-ecr-logging@v1
-      
+        uses: aws-actions/amazon-ecr-login@v1
+
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY_NAME }}
           IMAGE_TAG: latest
-        run:
-          # Build a docker container and push it to ECR so that it can
-          # to be deployed to ECR.
-          docker build -t $ECR_REPOSITORY:$IMAGE_TAG .
+        run: |
+          # Build a docker container and
+          # push it to ECR so that it can
+          # be deployed to ECS.
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          echo "::set-output name-image::$ECR_REGISTRY:$IMAGE_TAG"
-
-
-  contineous-Deployment:
+          echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+          
+          
+  Continuous-Deployment:
     needs: build-and-push-ecr-image
     runs-on: self-hosted
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      
-      - name: Configure AWS Credentials
+
+      - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
-        with: 
-          aws-acess-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws_region: ${{ secrets.AWS_REGION }}
-      
+          aws-region: ${{ secrets.AWS_REGION }}
+
       - name: Login to Amazon ECR
         id: login-ecr
-        uses: aws-action/amazon-ecr-login@v1
+        uses: aws-actions/amazon-ecr-login@v1
+      
       
       - name: Pull latest images
-        run:
-          docker pull ${{secrets.AWS_ECR_LOGIN_URI}}/${{secrets.ECR_REPOSITORY_NAME}}:latest
-      
-      # - name: stop and remove container  if running
-      # run: |
-      #  docker ps -q --filter "name-mltest" | grep -q . && docker stop mltest && docker rm -fv mltest
-      - name: Run docker Image to serve users
         run: |
-          docker run -d -p 8000:8000 --ipc="host" --name=mltest -e 'AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}' -e 'AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}' -e 'AWS_REGION=${{ secrets.AWS_REGION }}' ${{secrets.AWS_ECR_LOGIN_URI}}/${{secrets.ECR_REPOSITORY_NAME}}:latest
-      - name: clean previous image and container
+         docker pull ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
+         
+      # - name: Stop and remove  container if running
+      #   run: |
+      #    docker ps -q --filter "name=mltest" | grep -q . && docker stop mltest && docker rm -fv mltest
+       
+      - name: Run Docker Image to serve users
         run: |
-          docker system prune -f
+         docker run -d -p 8080:8080 --ipc="host" --name=mltest -e 'AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}' -e 'AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}' -e 'AWS_REGION=${{ secrets.AWS_REGION }}'  ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
+      - name: Clean previous images and containers
+        run: |
+         docker system prune -f
